--- a/stuff/_channel-bar.scss
+++ b/stuff/_channel-bar.scss
@@ -1,8 +1,8 @@
 :root {
-  .container_e44302.themed_e44302 {
+  .container_fc4f04.themed_fc4f04 {
     background: var(--background-secondary);
 
-    .children_e44302::after {
+    .children_fc4f04::after {
       background: linear-gradient(
         90deg,
         rgba(54, 57, 63, 0) 0,
@@ -52,7 +52,7 @@
   }
 
   // I'm a pro
-  .toolbar_e44302 > a[href="https://support.discord.com"],
+  .toolbar_fc4f04 > a[href="https://support.discord.com"],
   .searchLearnMore_b0286e {
     display: none;
   }
@@ -91,7 +91,7 @@
     }
 
     // Calendar
-    .calendarPicker__47c85 .react-datepicker {
+    .calendarPicker_be05cd .react-datepicker {
       background-color: var(--background-secondary-alt);
 
       &__day,
