--- a/stuff/_chat.scss
+++ b/stuff/_chat.scss
@@ -12,7 +12,7 @@
     z-index: 2;
     margin: 0;
     padding: 0;
-    min-width: unset !important;
+    min-width: unset;
 
     & > .avatar_b2ca13 {
       width: 40px !important;
