action buttons fill button

--- a/stuff/_server-list.scss
+++ b/stuff/_server-list.scss
@@ -139,6 +139,7 @@
       & > .button_adca65 {
         color: var(--user-buttons-color);
         margin: var(--user-buttons-spacing) auto 0 auto;
+        width: 100%;
       }
     }
   }
