fix avtar hover overlay

--- a/stuff/_other.scss
+++ b/stuff/_other.scss
@@ -392,6 +392,7 @@
 
   .wrapper_c51b4e,
   .avatar_c51b4e,
+  .overlay_f94206::after,
   .profile_d6fbe8 .avatarUploaderInner-yEhTv5,
   .voiceAvatar_db83a2,
   .avatar_f9f2ca,
