--- a/stuff/_friends.scss
+++ b/stuff/_friends.scss
@@ -62,7 +62,7 @@
   }
 
   // User profile
-  .userPanelOuter_c69a7b {
+  .userProfileOuter_c69a7b {
 
     // Banner
     .bannerSVGWrapper_b32cc2 {
@@ -173,15 +173,18 @@
     }
 
     // Body
-    .userPanelOverlayBackground_a2b6ae:nth-child(3):not(.profilePanelConnections_b433b4) {
+    .listScroller_e4be58 {
       padding: 12px;
+      display: flex;
+      flex-direction: column;
+      row-gap: 8px;
 
       .scroller_d2b491 {
         padding-right: 12px !important;
       }
 
       // -- Activities --
-      .activity__20c1e {
+      .userProfileActivity_fc39e7 {
         padding: 16px;
         margin-top: 25px;
         z-index: 1;
@@ -189,6 +192,7 @@
         .text_ec2fa7,
         .textRow_c1d9fd,
         .anchor_af404b,
+        .headerText_c1d9fd,
         .activityName_c1d9fd {
           color: white;
         }
@@ -257,7 +261,7 @@
         }
 
         // Spotify
-        .timeBarUserPopoutV2_c1d9fd {
+        .barInner_ec2fa7 {
           &::before {
             content: "";
             position: absolute;
