--- a/stuff/_member-list.scss
+++ b/stuff/_member-list.scss
@@ -117,7 +117,7 @@
     }
 
     // Body
-    .userPopoutInner_c69a7b {
+    .body_b07019 {
       .scroller_d2b491 {
         padding-right: 12px !important;
       }
