fix: right padding in context menus

--- a/stuff/_other.scss
+++ b/stuff/_other.scss
@@ -83,6 +83,7 @@
     overflow: hidden;
 
     .scroller_d90b3d {
+      overflow: hidden auto !important;
       padding: 0;
 
       .separator_d90b3d {
