+ amazon music connection

--- a/stuff/_member-list.scss
+++ b/stuff/_member-list.scss
@@ -694,4 +694,11 @@
   .connectedAccountIcon_f3eb60[aria-label="Bungie.net"] {
     background-color: #00a3e353;
   }
+  .accountBtnInner_ec99f9[aria-label="Amazon Music"],
+  .accountButtonInner_e2a436[aria-label="Amazon Music"],
+  .accountButtonInner_e2a436[aria-label="Amazon Music"]:hover,
+  .connectionIcon_e2a436[alt="Amazon Music"],
+  .connectedAccountIcon_f3eb60[aria-label="Amazon Music"] {
+    background-color: #0dbff553;
+  }
 }
