--- a/stuff/_friends.scss
+++ b/stuff/_friends.scss
@@ -72,7 +72,7 @@
         mask: unset;
       }
 
-      .banner_c3e427 {
+      .banner_d5fdb1 {
         -webkit-mask-image: linear-gradient(#000000a7, #000000a7);
         height: 120px;
       }
@@ -172,7 +172,7 @@
     }
 
     // Body
-    .scroller_fb646f {
+    .scroller_c0721c {
       padding: 12px;
       display: flex;
       flex-direction: column;
