--- a/betterdiscord/comfy.theme.css
+++ b/betterdiscord/comfy.theme.css
@@ -1,10 +1,7 @@
 /**
-* @name Comfy (metro's ver)
-* @author Nyria#3863
-* @description Stay comfy while talking to your friends, edited by @metro420yt
-* @invite rtBQX5D3bD
-* @version 2.4
-* @donate https://ko-fi.com/nyria
+* @name Comfy Fork
+* @author Nyria#3863, metro420yt
+* @description Stay comfy while talking to your friends
 */
 
 @import "https://raw.githubusercontent.com/Metro420yt/Discord-comfy/master/betterdiscord/main.css";
