seperated activity wave + support for dm sidebar + support for client user profile (pfp beside chat bar)

--- a/app.scss
+++ b/app.scss
@@ -3,6 +3,7 @@
 @forward "stuff/channel-list";
 @forward "stuff/channel-bar";
 @forward "stuff/member-list";
+@forward "stuff/activity";
 @forward "stuff/settings";
 @forward "stuff/friends";
 @forward "stuff/other";
