less background in client profile

--- a/stuff/_member-list.scss
+++ b/stuff/_member-list.scss
@@ -9,6 +9,15 @@
   .userPopoutOuter_c69a7b {
     max-height: unset !important;
 
+    .menus_ad5fac {
+      gap: 8px;
+    }
+
+    .body_ad5fac {
+      overflow: unset !important;
+      padding: 4px 12px !important;
+    }
+
     .userPopoutInner_c69a7b {
       max-height: unset !important;
     }
