backwards compatibility changed key in 8648966b5c3f9c5471c82a59535a695972e2fa21, didnt realize that others would still have old key + added prettier ignore

--- a/betterdiscord/comfy.theme.css
+++ b/betterdiscord/comfy.theme.css
@@ -100,7 +100,7 @@
   --online: #43b581;
 
   /* Idle - Default value : #FAA61A */
-  --iddle: #faa61a;
+  --idle: #faa61a;
 
   /* Do Not Disturb - Default value : #F04747 */
   --dnd: #f04747;
