--- a/stuff/_server-list.scss
+++ b/stuff/_server-list.scss
@@ -206,6 +206,7 @@
         background-color: inherit;
         border-radius: 100%;
         z-index: -1;
+        // prettier-ignore
         animation: var(--disable-animations), 2s pulse infinite;
         will-change: transform;
       }
